# SOAR

./: pyproject.toml
custom_actions/: akamai_edgegrid.py
custom_actions/templates/: akamai_request.yml
my_custom_integrations/templates/: akamai_request.yml
